--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           <div class="description-subtitle">Dynamic Data and Third-Party APIs</div>
           <div class="description-text">When I finished my first year at Sheridan College, I worked for a startup connected with the cryptocurrency world. <br><br>During the last couple of weeks, I was doing my portfolio and remembered about this project, which is why I decided to bring this topic up and choose this API for the project.</div>
           <a href="#table-container-link">
-          <img src="assets/arrow.png" class="arrow"/>
+          <img src="arrow.png" class="arrow"/>
           <!-- Image was taken from here:
           https://www.freeiconspng.com/thumbs/white-arrow-png/white-down-arrow-png-2.png. -->
         </a>
         <!-- Here I reminded myself how to create a link from one element to another element located on the same page:
           https://blog.hubspot.com/marketing/jump-link-same-page. -->
         </div>
-          <img src="assets/b2.png" class="bitcoin"/>
+          <img src="b2.png" class="bitcoin"/>
           <!-- Image was taken from here:
             https://a-static.besthdwallpaper.com/logo-de-la-crypto-monnaie-bitcoin-fond-d-ecran-3840x2160-63700_54.jpg. -->
       </div>
